documentation/versioned_docs/version-2.x/examples/cad-3dobjects.mdx
---
id: cad-3dobjects
title: Add custom 3D objects
description: Extend the scene with custom ThreeJS objects.
---

import { DemoWrapper } from '@site/versioned_docs/version-2.x/components/DemoWrapper';
import useBaseUrl from '@docusaurus/useBaseUrl';

Sometimes it's useful to add custom content to the 3D scene to model data Reveal doesn't
support or to customize the 3D environment. Reveal supports this by using the
`Cognite3DViewer.addObject3D`-function which accepts [ThreeJS](https://threejs.org/) objects.

:::note
There are a few restrictions to the 3D content that is to be combined with Reveal models:
- Reveal uses an "implicit lighting model", i.e. no lights are added to the scene. If you
need lights this needs to be added to the viewer scene.
- Geometry is expected to use "default depth testing", meaning
[`THREE.Material.depthTest`](https://threejs.org/docs/#api/en/materials/Material.depthTest) must be `true`,
[`THREE.Material.depthWrite`](https://threejs.org/docs/#api/en/materials/Material.depthWrite) must  `true` and
[`THREE.Material.depthFunc`](https://threejs.org/docs/#api/en/materials/Material.depthFunc) must be `LessEqualDepth`.
You might experience unexpected results if you are using materials where this doesn't hold.
- Objects with opacity less than 1.0 will appear transparent regardless of if
[`THREE.Material.transparent`](https://threejs.org/docs/?q=Material#api/en/materials/Material.transparent) is `true` or
`false`. The final composited image is always blended as if
[`THREE.Material.blendDst`](https://threejs.org/docs/?q=Material#api/en/materials/Material.blendDst) is
`OneMinusSrcAlphaFactor` and the blending settings on the material won't have any effect on the composition.
:::

<!-- :::tip
Reveal uses an "implicit lighting model", i.e. no lights are added to the scene. If you
need lights this needs to be added to the viewer scene.
::: -->

<DemoWrapper name="Cognite3DViewerDemo" />

## Adding markers to the scene on clicks

The following example reacts to clicks in the scene and adds markers to the positions clicked.

```jsx runnable-2x
const markerGeometry = new THREE.SphereBufferGeometry(1, 10, 10);
const markerMaterial = new THREE.MeshBasicMaterial({
  color: 'blue',
  transparent: true,
  opacity: 0.7
});
viewer.on('click', async event => {
  const intersection = await viewer.getIntersectionFromPixel(event.offsetX, event.offsetY);
  if (intersection) {
    const marker = new THREE.Mesh(markerGeometry, markerMaterial);
    marker.position.copy(intersection.point);
    viewer.addObject3D(marker);
  }
});
```

## Add environment

To make a model feel more natural it might be useful to add an environment. The following
example adds sky and a sea effect for the example oil rig.

<img
  src={useBaseUrl('/img/cad-skyandocean.png')}
  alt="Oil rig with sky and ocean"
/>

Below you'll find [an interactive example](#interactive-example), but first lets walk through
the different parts.
See the bottom of this page for an interactive example.

First, let's encapsulate the model in a large sky-textured sphere to create an illusion of
skies. The sphere map is available from [Free HDR - EXR SKIES-blog](http://freepanorama.blogspot.com/).

```js
const modelCenterAtSeaLevel = model
  .getModelBoundingBox()
  .getCenter(new THREE.Vector3());
modelCenterAtSeaLevel.y = 0.0;

// Skybox
const skyBox = new THREE.Mesh(
  new THREE.SphereBufferGeometry(3000, 15, 15),
  new THREE.MeshBasicMaterial({
    side: THREE.BackSide,
    // Skybox texture from http://freepanorama.blogspot.com/2010/01/sky7-spherical.html
    map: new THREE.TextureLoader().load(skyUrl),
  })
);
skyBox.position.copy(modelCenterAtSeaLevel);
viewer.addObject3D(skyBox);
```

This looks a bit better, but the oil rig appears to be floating mid-air at this point. Lets
add an ocean. A plane is rendered at the sea level and an ocean effect is applied to the plane.

Note that since the ocean has moving waves we want to render the model continuously and not only
when camera changes or data is loaded. We do this by repeatedly calling `Cognite3DViewer.requestRedraw()`.

```js
// Water
const geometry = new THREE.PlaneGeometry(20000, 20000, 127, 127);
geometry.rotateX(- Math.PI / 2);

const position = geometry.attributes.position;
position.usage = THREE.DynamicDrawUsage;

for (let i = 0; i < position.count; i ++) {
  const y = 35 * Math.sin(i / 2);
  position.setY(i, y);
}

const texture = new THREE.TextureLoader().load('https://threejs.org/examples/textures/water.jpg');
texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
texture.repeat.set(5, 5);
const material = new THREE.MeshBasicMaterial({color: 0xd4f1f9, map: texture});
const water = new THREE.Mesh(geometry, material);

viewer.addObject3D(water);

function updateOcean() {
  for (let i = 0; i < position.count; i ++) {
    const y = Math.random() * Math.sin(i / 2) * 10;
    position.setY(i, y);
  }
  water.geometry.attributes.position.needsUpdate = true;
  viewer.requestRedraw();
  setInterval(updateOcean, 1500);
}
updateOcean();
```

The user is available to move below sea level. Let's restrict the movement to avoid this.

```js
viewer.on('cameraChange', (position, target) => {
  // Keep camera above sea level
  if (position.y < 20) {
    position.y = 21;
    viewer.setCameraPosition(position);
  }
  // Clamp point within our skybox to avoid moving outside the defined 'world'
  if (!boundingSphere.containsPoint(position)) {
    boundingSphere.clampPoint(position, position);
    viewer.setCameraPosition(position);
  }
});
```

### Interactive example

Below is the complete code for adding a skybox and ocean to the scene.

```jsx runnable-2x
// const skyUrl = 'https://...'
const modelCenterAtSeaLevel = model
  .getModelBoundingBox()
  .getCenter(new THREE.Vector3());
modelCenterAtSeaLevel.y = 0.0;

// Skybox
const skyBox = new THREE.Mesh(
  new THREE.SphereBufferGeometry(3000, 15, 15),
  new THREE.MeshBasicMaterial({
    side: THREE.BackSide,
    // Skybox texture from http://freepanorama.blogspot.com/2010/01/sky7-spherical.html
    map: new THREE.TextureLoader().load(skyUrl),
  })
);
skyBox.position.copy(modelCenterAtSeaLevel);
viewer.addObject3D(skyBox);

// Water
const geometry = new THREE.PlaneGeometry(20000, 20000, 127, 127);
geometry.rotateX(-Math.PI / 2);

const position = geometry.attributes.position;
position.usage = THREE.DynamicDrawUsage;

for (let i = 0; i < position.count; i ++) {
  const y = 35 * Math.sin(i / 2);
  position.setY(i, y);
}

const texture = new THREE.TextureLoader().load('https://threejs.org/examples/textures/water.jpg');
texture.wrapS = texture.wrapT = THREE.RepeatWrapping;
texture.repeat.set(5, 5);
const material = new THREE.MeshBasicMaterial({color: 0xd4f1f9, map: texture});
const water = new THREE.Mesh(geometry, material);

viewer.addObject3D(water);

function updateOcean() {
  for (let i = 0; i < position.count; i ++) {
    const y = Math.random() * Math.sin(i / 2) * 10;
    position.setY(i, y);
  }
  water.geometry.attributes.position.needsUpdate = true;
  viewer.requestRedraw();
  setInterval(updateOcean, 1500);
}
updateOcean();

// Restrict camera movement
const boundingSphere = new THREE.Sphere(modelCenterAtSeaLevel, 2000);
viewer.on('cameraChange', (position, target) => {
  // Keep camera above sea level
  if (position.y < 20) {
    position.y = 21;
    viewer.setCameraPosition(position);
  }
  // Clamp point within our skybox to avoid moving outside the defined 'world'
  if (!boundingSphere.containsPoint(position)) {
    boundingSphere.clampPoint(position, position);
    viewer.setCameraPosition(position);
  }
});
```
